# dotai

./: AGENTS.md  AGENTS.sh  PROJECT.md
.agent/: .gitignore  index.md  (+3 more)
.agent/mcp/mcp-project-memory/: .air.toml  .env.example  .gitattributes  .gitignore  Makefile  README.md  go.mod  go.sum  mcp-project-memory  pyproject.toml
.agent/mcp/mcp-project-memory/cmd/mcp-project-memory/: cmd_build.go  cmd_models.go  cmd_reset.go  cmd_serve.go  helpers.go  main.go
.agent/mcp/mcp-project-memory/data/: processed.json
.agent/mcp/mcp-project-memory/data/memories/: 007ebe80-e9e1-409b-9590-8410f0923087.json  01a3b224-fa70-40ab-993c-03923696f386.json  0384e501-d01c-4644-b730-a2edcb440e3a.json  0517d703-32bd-48e5-ad5e-0e863885fdea.json  05c9a047-5501-42ac-98be-e987752e2170.json  0b9513d5-47c8-4ccb-bac3-def93bca027b.json  0d7744d1-f030-4920-9501-df485fb73ca4.json  0e040f12-969e-440a-af12-acb5e5b2df28.json  0e2ed6d6-7fd7-4485-af83-8636d741fa3e.json  (+211 more)
.agent/mcp/mcp-project-memory/docs/: 2026-0313T1813--improve-search-and-scoring.md  last-build-no-linked-memories.md  solid-dry.md  sweep-2026-0313-round2.md
.agent/mcp/mcp-project-memory/scripts/: install  requirements.txt
.agent/mcp/mcp-project-memory/src/: __init__.py  db.py  deps.py  git.py  inspector.py  path_filter.py  project-memory  server.py  utils.py
.agent/mcp/mcp-project-memory/tests/: conftest.py  test_batching.py  test_build.py  test_db.py  test_git.py  test_inspector.py  test_llm_client.py  test_memory_factory.py  test_openrouter.py  test_path_filter.py  test_retry.py  test_server.py  test_stores.py  test_synthesis.py
(+203 files in other folders)
